# mal-client

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/endpoints/: auth.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: user.py
