[tool.poetry]
name = "backend"
version = "0.1.0"
description = "MyAnimeList Custom Client Backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.128.0"
uvicorn = "^0.27.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
